--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
     <!-- jumbotron -->
 
-    <section class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-            featured content or information.</p>
+    <section class="jumbotron text-center">
+        <img src="img/IMG_20220602_220125.jpg" alt="Muh Firdaus" width="200" class="rounded-circle img-thumbnail">
+        <h1 class="display-4">Muh Firdaus</h1>
+        <p class="lead">Student | Backend Developer</p>
     </section>
 
     <!-- akhir jumbotron -->
