--- a/index.html
+++ b/index.html
@@ -55,9 +55,22 @@
         <img src="img/IMG_20220602_220125.jpg" alt="Muh Firdaus" width="200" class="rounded-circle img-thumbnail">
         <h1 class="display-4">Muh Firdaus</h1>
         <p class="lead">Student | Backend Developer</p>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#ffffff" fill-opacity="1"
+                    d="M0,192L48,176C96,160,192,128,288,133.3C384,139,480,181,576,181.3C672,181,768,139,864,149.3C960,160,1056,224,1152,224C1248,224,1344,160,1392,128L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+                </path>
+            </svg>
+        </svg>
     </section>
 
     <!-- akhir jumbotron -->
+
+    <!-- about -->
+
+    <section id="About"></section>
+
+    <!-- about -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
