--- a/index.html
+++ b/index.html
@@ -68,10 +68,38 @@
 
     <!-- about -->
 
-    <section id="About"></section>
+    <section id="About">
+        <div class="row text-center mb-3">
+            <div class="col">
+                <h2>About Me</h2>
+            </div>
+        </div>
+        <div class="row justify-content-center fs-5 text-center">
+            <div class="col-4">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit sapiente praesentium quasi illum
+                    explicabo esse facere aliquid non deleniti cupiditate?</p>
+            </div>
+            <div class="col-4">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit, consequuntur tempore molestias
+                    voluptate qui assumenda voluptas nesciunt perferendis saepe et repellat, molestiae, explicabo
+                    dolorem voluptatum.</p>
+            </div>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#e2edff" fill-opacity="1"
+                d="M0,224L48,213.3C96,203,192,181,288,160C384,139,480,117,576,144C672,171,768,245,864,229.3C960,213,1056,107,1152,85.3C1248,64,1344,128,1392,160L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+            </path>
+        </svg>
+    </section>
 
-    <!-- about -->
+    <!-- end about -->
 
+    <!-- project -->
+    <section id="projects">
+
+
+    </section>
+    <!-- end project -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
