--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
             </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-            <div class="col-4">
+            <div class="col-md-4">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit sapiente praesentium quasi illum
                     explicabo esse facere aliquid non deleniti cupiditate?</p>
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit, consequuntur tempore molestias
                     voluptate qui assumenda voluptas nesciunt perferendis saepe et repellat, molestiae, explicabo
                     dolorem voluptatum.</p>
@@ -96,6 +96,42 @@
 
     <!-- project -->
     <section id="projects">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col">
+                    <h2>My Projects</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 mb-3">
+                    <div class="card">
+                        <img src="img/projects/1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="card">
+                        <img src="img/projects/2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="card">
+                        <img src="img/projects/3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
     </section>
