--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <!-- boostrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
     <link rel="stylesheet" href="style.css">
 
     <title>Portofolio</title>
 </head>
 
-<body>
+<body id="home">
     <!-- navbar -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">Muh Frds</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -28,17 +31,17 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#About">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Project</a>
+                        <a class="nav-link" href="#projects">Project</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#Contact">Contact</a>
                     </li>
 
                 </ul>
@@ -162,13 +165,13 @@
 
     <section id="Contact">
         <div class="container">
-            <div class="row text-center">
+            <div class="row text-center mb-3">
                 <div class="col">
                     <h2>Contact Me</h2>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-8">
+            <div class="row justify-content-center">
+                <div class="col-md-6">
                     <form>
                         <div class="mb-3">
                             <label for="name" class="form-label">Nama Lengkap</label>
@@ -187,9 +190,23 @@
                 </div>
             </div>
         </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#0d6efd" fill-opacity="1"
+                d="M0,128L34.3,138.7C68.6,149,137,171,206,149.3C274.3,128,343,64,411,85.3C480,107,549,213,617,213.3C685.7,213,754,107,823,90.7C891.4,75,960,149,1029,176C1097.1,203,1166,181,1234,154.7C1302.9,128,1371,96,1406,80L1440,64L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z">
+            </path>
+        </svg>
     </section>
 
     <!-- end Contact -->
+
+    <!-- footer -->
+    <footer class="bg-primary text-white text-center pb-5">
+        <p>
+            created with <i class="bi bi-heart-fill text-danger"></i> By <a href="" class="text-white fw-bold"></i>Muh
+                Firdaus </a>
+        </p>
+    </footer>
+    <!-- end footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
